Fixed dark mode not reaching the bottom on certain resolutions. Updated main intro description.

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,17 @@
    60% { transform: rotate( 0.0deg) }
   100% { transform: rotate( 0.0deg) }
 }
+
+body {
+  height: 100%;
+}
+
+#root, main {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact,
+.portfolio {
+  height: calc(100vh - 210px);
+}
